[project]
name = "rdw-ev5"
version = "0.1.0"
description = "Daily scraper for Kia EV5 registrations from RDW open data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
rdw-ev5 = "rdw_ev5.__main__:main"

[tool.setuptools.packages.find]
include = ["rdw_ev5*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
