[project]
name = "rdw-ev5"
version = "0.1.0"
description = "Daily scraper for Kia EV5 registrations from RDW open data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
rdw-ev5 = "rdw_ev5.__main__:main"

[tool.setuptools.packages.find]
include = ["rdw_ev5*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[tool.ruff.lint.per-file-ignores]
"rdw_ev5/report.py" = ["E501"]  # long lines live inside HTML template strings
